fixing horizontal overflow problem with hero banner. adding small white logo to top left. deleting old aussie files.

--- a/public/styles/components/hero.less
+++ b/public/styles/components/hero.less
@@ -30,6 +30,7 @@
 			display: block;
 			width: 100%;
 			height: 100%;
+			overflow: hidden;
 			img {
 				min-width: 100%;
     		min-height: 100%;
