--- a/public/styles/site/home.less
+++ b/public/styles/site/home.less
@@ -22,6 +22,12 @@
 	padding-top: 3em;
 }
 
+img.logo-white-small {
+	height: 30px;
+	width: 70px;
+  margin: 6px;
+}
+
 // LINKS
 .home-links {
 	text-align: center;
